tests/lean/ctx.lean.expected.out
ctx.lean:3:0: error: don't know how to synthesize placeholder
A B : Type,
a1 a2 a3 a4 a5 a6 a7 a8 a9 a10 : ℕ,
b1 b2 b3 : bool,
h : A = B,
p1 p2 : A × B
⊢ ℕ
ctx.lean:3:0: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
